--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.2",
     "lucide-react": "^0.462.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-table": "^7.8.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
