--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +33,7 @@
     "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "react-table": "^7.8.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
